samples/_failures_safe/1761647523_c62c0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e325f12.c: In function ‘main’:
./samples/SAFE/__tmp_5e325f12.c:171:17: error: expected expression at end of input
  171 |                 if (
      |                 ^~
./samples/SAFE/__tmp_5e325f12.c:171:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e325f12.c:171:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e325f12.c:171:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e325f12.c:171:17: error: expected declaration or statement at end of input
